--- a/_notebooks/2020-05-20-Monte Carlo estimation.ipynb
+++ b/_notebooks/2020-05-20-Monte Carlo estimation.ipynb
@@ -5,12 +5,13 @@
    "metadata": {},
    "source": [
     "# Understanding Monte carlo Simulation\n",
-    "> Monte carlo simulation\n",
+    "> Using Monte carlo simulation to estimate the statistics of any distribution\n",
     "\n",
     "- toc: true \n",
     "- badges: true\n",
     "- comments: true\n",
-    "- categories: [jupyter]\n",
+    "- hide: false\n",
+    "- categories: [monte-carlo, gamma distribution, beta distribution, beta-binomial distribution, scipy, matplotlib, python]\n",
     "- image: images/chart-preview.png"
    ]
   },
@@ -21,7 +22,7 @@
     "## Introduction\n",
     "Monte carlo estimation refers to simulating hypothetical draws from a probablistic distribution in order to calculate important quantities of that distribution like mean, variance, quantiles etc. In this blog we will look at how to calculate these estimations for any given distribution using python scientific packages like scipy, numpy and matplotlib.\n",
     "\n",
-    "## Why?\n",
+    "## Why Monte carlo?\n",
     "In general, mathematically we can derive mean, std and other statistics for any [standard](https://docs.scipy.org/doc/scipy/reference/stats.html) distribution. For example the mean of any distribution is obtained using \n",
     "$$\n",
     "E(\\theta) = \\int_0^\\infty \\theta P(\\theta) d\\theta\n",
@@ -51,8 +52,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Example 1\n",
-    "- Lets try to estimate the mean of a **Gamma** distibution and compare it with actual mean of a gamma distribution. Mean of gamma distribution is $\\alpha/\\beta$"
+    "## Example 1\n",
+    "> Lets try to estimate the mean of a **Gamma** distibution and compare it with actual mean of a gamma distribution. Mean of gamma distribution is $\\alpha/\\beta$"
    ]
   },
   {
@@ -248,7 +249,9 @@
    "metadata": {},
    "source": [
     "## Example 2\n",
-    "A binomial distribution of N (10) trails where the probability of success follows a beta distribution (2, 2). This quite happens in bayesian modelling where we need to estimate the mean of joint probability of prior and likelihood (we will discuss in detail in some other blog post). In this example\n",
+    "> A binomial distribution of N (10) trails where the probability of success follows a beta distribution (2, 2). \n",
+    "\n",
+    "This quite happens in bayesian modelling where we need to estimate the mean of joint probability of prior and likelihood (we will discuss in detail in some other blog post). In this example\n",
     "$$\n",
     "y|\\phi = Bin(N, \\phi)  \n",
     "$$\n",
