--- a/_notebooks/2020-05-20-Monte Carlo estimation.ipynb
+++ b/_notebooks/2020-05-20-Monte Carlo estimation.ipynb
@@ -7,6 +7,7 @@
     "# Understanding Monte carlo Simulation\n",
     "> Using Monte carlo simulation to estimate the statistics of any distribution\n",
     "\n",
+    "- sticky_rank: 1\n",
     "- toc: true \n",
     "- badges: true\n",
     "- comments: true\n",
@@ -416,7 +417,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- In this tutorial, we understood how to calculate statistics of any kind of distribution using Monte carlo simulation"
+    "- In this tutorial, we understood how to calculate statistics for any kind of distribution using Monte carlo simulation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<script src=\"https://utteranc.es/client.js\"\n",
+    "        repo=\"carbon2silicon\"\n",
+    "        issue-term=\"pathname\"\n",
+    "        theme=\"github-light\"\n",
+    "        crossorigin=\"anonymous\"\n",
+    "        async>\n",
+    "</script>"
    ]
   }
  ],
