--- a/_notebooks/2020-05-20-Monte Carlo estimation.ipynb
+++ b/_notebooks/2020-05-20-Monte Carlo estimation.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -107,6 +107,15 @@
     "plt.plot(k, pdf)\n",
     "\n",
     "plt.legend(title=\"$alpha$\", labels=alpha);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig.savefig(\"../images/monte-\")"
    ]
   },
   {
@@ -417,7 +426,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- In this tutorial, we understood how to calculate statistics for any kind of distribution using Monte carlo simulation"
+    "- In this tutorial, we understood how to calculate statistics for any kind of distribution using Monte carlo simulation. I will try to add more examples and different use cases of monte carlo simulation. Watch this space."
    ]
   },
   {
