--- a/_notebooks/2020-05-20-Monte Carlo estimation.ipynb
+++ b/_notebooks/2020-05-20-Monte Carlo estimation.ipynb
@@ -13,7 +13,7 @@
     "- comments: true\n",
     "- hide: false\n",
     "- categories: [monte-carlo, gamma distribution, beta distribution, beta-binomial distribution, scipy, matplotlib, python]\n",
-    "- image: images/chart-preview.png"
+    "- image: images/gamma_distribution.png"
    ]
   },
   {
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -107,15 +107,6 @@
     "plt.plot(k, pdf)\n",
     "\n",
     "plt.legend(title=\"$alpha$\", labels=alpha);"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig.savefig(\"../images/monte-\")"
    ]
   },
   {
