adding fastai stuff

--- a/_notebooks/2020-07-01-fastai_deep_learning_101.ipynb
+++ b/_notebooks/2020-07-01-fastai_deep_learning_101.ipynb
@@ -170,6 +170,26 @@
     "print(b.cumlens)\n",
     "print(b.totlen)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- This is under active development. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<script src=\"https://utteranc.es/client.js\"\n",
+    "        repo=\"carbon2silicon\"\n",
+    "        issue-term=\"pathname\"\n",
+    "        theme=\"github-light\"\n",
+    "        crossorigin=\"anonymous\"\n",
+    "        async>\n",
+    "</script>"
+   ]
   }
  ],
  "metadata": {
