--- a/_notebooks/2020-07-04-fastaiv2_image_classification_101.ipynb
+++ b/_notebooks/2020-07-04-fastaiv2_image_classification_101.ipynb
@@ -10,6 +10,8 @@
     "- toc: true \n",
     "- badges: true\n",
     "- comments: true\n",
+    "- hide: true\n",
+    "- search_exclude: false\n",
     "- categories: [fastai, python, deep-learning]\n",
     "- image: images/favicon.ico"
    ]
@@ -19,7 +21,7 @@
    "metadata": {},
    "source": [
     "## Introduction\n",
-    "classifying objects is one of the primary tasks of Deep learning in computer vision. If this happens at image level it is called image classification and at pixel level it is called segmentation. Image (object) classification is the core for any analytics work you done on images. Lets see how image classification is done effectively using fastaiv2. "
+    "classifying objects is one of the primary tasks of Deep learning in computer vision. If this happens at image level it is called image classification and at pixel level it is called segmentation. Image (object) classification is the core for any analytics work you do on images. In this blogpost, lets see how image classification is done effectively using fastaiv2. "
    ]
   },
   {
@@ -255,7 +257,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> Important: resnet18 is a function which takes pretrained as an argument, if you are defining your own architecture, make sure that it takes this an argument. "
+    "> Important: resnet18 is a function which takes pretrained as an argument, if you are defining your own architecture, make sure that it takes this as an argument. "
    ]
   },
   {
@@ -308,11 +310,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [],
    "source": [
-    "learn = cnn_learner(dls, resnet18, pretrained=True, n_out=2)"
+    "learn = cnn_learner(dls, resnet18, pretrained=True, n_out=2, metics=[accuracy])"
    ]
   },
   {
@@ -369,16 +371,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "WORK IN PROGRESS\n",
-    "- dataset \n",
-    "- transforms and writing custom transforms\n",
-    "- dataloader \n",
-    "- networks available and writing custom networks\n",
-    "- loss and writing custom loss function\n",
-    "- optimizers and writing custom optimizers \n",
-    "- Learner module introduction\n",
-    "- callbacks and writing a custom callbacks \n",
-    "- useful tips "
+    "## work in progress\n",
+    "- How to define your own loss function? (focal loss)\n",
+    "- How to define your own metric? (auc_roc_score)\n",
+    "- write custom callbacks to save model body and head separately. (SAVEMODELHEAD)\n",
+    "- some useful tips for training classifiers\n",
+    "- use mix precision training \n",
+    "- training on a TPU"
    ]
   },
   {
@@ -386,7 +385,8 @@
    "metadata": {},
    "source": [
     "## Resources\n",
-    "- https://www.kaggle.com/jhoward/fastai-v2-pipeline-tutorial"
+    "- https://www.kaggle.com/jhoward/fastai-v2-pipeline-tutorial\n",
+    "- https://docs.fast.ai/basic_train.html#Discriminative-layer-training"
    ]
   },
   {
