removing fastai apis

--- a/_notebooks/2020-07-01-fastai_deep_learning_101.ipynb
+++ b/_notebooks/2020-07-01-fastai_deep_learning_101.ipynb
@@ -10,6 +10,8 @@
     "- toc: true \n",
     "- badges: true\n",
     "- comments: true\n",
+    "- hide: true\n",
+    "- search_exclude: false\n",
     "- categories: [fastai, python, deep-learning]\n",
     "- image: images/favicon.ico"
    ]
