--- a/_notebooks/2020-07-04-fastaiv2_image_classification_101.ipynb
+++ b/_notebooks/2020-07-04-fastaiv2_image_classification_101.ipynb
@@ -354,7 +354,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Callbacks \n",
+    "### Callbacks \n",
     "fastai's training loop is highly extensible, with a rich callback system. There are several [callbacks](https://docs.fast.ai/callbacks.html#callbacks) defined and we can define our own using [callback](https://docs.fast.ai/callback.html#callback). Some of them include, \n",
     "\n",
     "### schedular\n",
@@ -575,7 +575,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Using SGDR to training "
+    "### Using SGDR to training "
    ]
   },
   {
@@ -600,7 +600,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Training using mix precision"
+    "### Training using mix precision"
    ]
   },
   {
@@ -617,7 +617,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Predict, save and show_results\n",
+    "### Predict, save and show_results\n",
     "Once the model is trained, we want to check performance on test data or deploy (save) the model to validate on new data. Also we need to do an error analysis to understand where the model is making mistakes. The learner has all these methods"
    ]
   },
@@ -696,7 +696,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## work in progress\n",
+    "# work in progress\n",
     "- training on a TPU"
    ]
   },
